@@ -107,9 +107,7 @@ bool ecAboutDialog::AddControls(wxWindow* parent)
     }
 
     // Customize the HTML
-    wxString verString;
-    verString.Printf("%.2f", ecCONFIGURATION_TOOL_VERSION);
-    htmlText.Replace(wxT("$VERSION$"), verString);
+    htmlText.Replace(wxT("$VERSION$"), ecCONFIGURATION_TOOL_VERSION);
     htmlText.Replace(wxT("$DATE$"), __DATE__);
     
     wxSize htmlSize(420, 390);
